Fixed Text Wrapping for IOS

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     display: flex;
     justify-content: flex-end;
     gap: 2rem;
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 1rem;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -39,6 +39,7 @@ body {
     text-decoration: none;
     font-weight: bold;
     text-indent: 15px;
+    white-space: nowrap;
   }
   
   nav a:hover {
